--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -1,20 +1,22 @@
 # Workflow for publishing to GitHub Pages.
 name: Deploy to GitHub Pages
+
+inputs:
+  output-path:
+    required: false
+    default: "output/"
+    description: "Where to output the generated files (`pelican`'s `--output` option)"
+    type: string
+  python:
+    required: false
+    default: "3.12"
+    description: "The version of Python to use, for example: '3.12' (to use the most recent version of Python 3.12, this is faster) or '3.12.1' (to use an exact version, slower)"
+    type: string
+
 on:
   push:
     branches: ["main"]
-  workflow_call:
-    inputs:
-      output-path:
-        required: false
-        default: "output/"
-        description: "Where to output the generated files (`pelican`'s `--output` option)"
-        type: string
-      python:
-        required: false
-        default: "3.12"
-        description: "The version of Python to use, for example: '3.12' (to use the most recent version of Python 3.12, this is faster) or '3.12.1' (to use an exact version, slower)"
-        type: string
+  workflow_dispatch:
 permissions:
   contents: read
   pages: write
