--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -41,7 +41,7 @@ jobs:
           subprocess.run(cmd, shell=True, check=True)
       - name: Fix permissions
         run: |
-          chmod -c -R +rX "$output/" | while read line; do
+          chmod -c -R +rX "output/" | while read line; do
             echo "::warning title=Invalid file permissions automatically fixed::$line"
           done
       - name: Upload artifact
